--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     </div>
     <div id="selector">
         <h2>Do you need...</h2>
-        <form>
+        <form id="form">
             <label>Bathrooms?
-                <input type="radio" name="bathrooms" checked>Yes</input>
-                <input type="radio" name="bathrooms" checked>No</input>
+                <input type="radio" name="bathrooms" value="yes" checked>Yes</input>
+                <input type="radio" name="bathrooms" value="no">No</input>
             </label>
             <label>Wheelchair Access?
-                <input type="radio" name="wheelchair" checked>Yes</input>
-                <input type="radio" name="wheelchair" checked>No</input>
+                <input  type="radio" name="wheelchair" value ="yes" checked>Yes</input>
+                <input  type="radio" name="wheelchair" value="no">No</input>
             </label>
             <label>Inclusive play elements?
-                <input type="radio" name="inclusive" checked>Yes</input>
-                <input type="radio" name="inclusive" checked>No</input>
+                <input type="radio" name="inclusive" value="yes" checked>Yes</input>
+                <input type="radio" name="inclusive" value="no">No</input>
             </label>
             <input type="submit" value="Find your playground!">
         </form>
