--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="top">
-        <h2>South Brooklyn Playground Database</h2>
-        <p>Looking for a place to let your kids burn off some energy? Find a playground that fits what you need -- and then let people know what you thought of it!</p>
+        <h2 id="headline">South Brooklyn Playground Database</h2>
+        <p id="dek">Looking for a place to let your kids burn off some energy? Find a playground that fits what you need -- and then let people know what you thought of it!</p>
     </div>
     <div id="display">
         <ul id="selectedPlayground">
@@ -38,12 +38,12 @@
                 <input type="radio" name="inclusive" value="yes" checked>Yes</input>
                 <input type="radio" name="inclusive" value="no">No</input>
             </label>
-            <input type="submit" value="Find your playground!">
+            <input id="button" type="submit" value="Find your playground!">
         </form>
     </div>
-    <div>
+    <div id="playgroundList">
         <div id="results">
-            <ul id="playgroundList">
+            <ul></ul>
             </ul>
         </div>
     </div>
